modules/protocol/http/test/long_header_key-ref.txt
debug http: selecting http dissector on flow
debug cnx: opening connection 127.0.0.1:42077 -> 127.0.0.1:80
debug grammar: parse error at byte 9021 for field 1 in header: token /[^:[:blank:]]+/ doesn't match
debug grammar: parse error context: ...
info alert: id = <>
	severity = low
	description = invalid http header
debug cnx: dropping connection 127.0.0.1:42077 -> 127.0.0.1:80
debug cnx: closing connection 127.0.0.1:42077 -> 127.0.0.1:80
